2000-04-04  Bruno Haible  <haible@linuix.math.u-bordeaux.fr>

        * io.d (eof_handling): eof-value defaults to NIL.

2000-04-04  Bruno Haible  <haible@linuix.math.u-bordeaux.fr>

        * unix.d (O_BINARY): Undefine on BeOS.

2000-04-03  Martin Atzmueller  <marty@cs.utexas.edu>

	* _impnotes.html: documented the (abbreviated) keyword-commands
	for the debugger.

	* reploop.lisp (commands1): fixed a typo

2000-04-03  Bruno Haible  <haible@linuix.math.u-bordeaux.fr>

        * lispbibl.d (addressbus_mask) [UNIX_OSF]: Define to
          0xFFFFFF01FFFFFFFFUL instead of 0xFFFFFFC1FFFFFFFFUL.

2000-04-02  Bruno Haible  <haible@linuix.math.u-bordeaux.fr>

        * clhs.lisp (*browsers*): Add support for w3m.

2000-04-02  Bruno Haible  <haible@linuix.math.u-bordeaux.fr>

        * stream.d (finish_tty_output, force_tty_output): Ignore errno value
          after calling fsync() on BeOS.

        * lispbibl.d (STACK_register): Don't define on BeOS.
          (oint_type_*, oint_data_*): Define differently on BeOS.

        * socket.d (SERVENT_TO_STACK, LISP:SOCKET-SERVICE-PORT): Don't define
          if UNIX_BEOS. BeOS5 lacks getservent() and getservbyport().
        * spvw.d (main): On BeOS, add :BEOS to *features*.
        * beossock.lisp: New file.
        * init.lisp: On BeOS, load beossock.lisp.
        * makemake.in (LPARTS): Add beossock.
        * gettext/po/Makefile.devel (LISPSOURCES): Add beossock.

        * autoconf/aclocal.m4 (CL_GETHOSTNAME, CL_TCPCONN): For the prototypes
          of gethostname and inet_addr, on BeOS, include <sys/socket.h> and
          <netdb.h>.

2000-04-02  Bruno Haible  <haible@linuix.math.u-bordeaux.fr>

        Allow building on filesystems lacking symlinks and hard links.
        * autoconf/acgeneral.m4 (AC_OUTPUT_LINKS): If "ln" fails, try "cp -p".
        * autoconf/aclocal.m4 (CL_PROG_CP): Renamed from CL_CP.
          (CL_PROG_LN, CL_PROG_LN_S): New macros.